<resources>
    <string name="app_name">Remember</string>

    //Main menu
    <string name="Calendar">Calendar</string>
    <string name="action_settings">Settings</string>
    <string name="Diary">Diary</string>
    <string name="Reminder">Reminder</string>
    <string name="Memo">Alarm</string>
    <string name="Weather">Weather</string>

    //Calendar
    <string name="title_activity_calender">CalenderActivity</string>
    <string name="CalendarDate">Calendar</string>
    <string name="listView">listView</string>
    <string name="addEvent">Add Event</string>
    <string name="pop">PopUpWindow"</string>

    //Diary
    <string name="title_activity_diary">Diary</string>
    <string name="DearDiary">Dear Diary</string>
    <string name="DiaryDate">DiaryDate</string>
    <string name="DiarySend">Save</string>
    <string name="DiaryPrevious">Previous</string>
    <string name="DiaryNext">Next</string>

    //Weather
    <string name="open_weather_maps_app_id">d5fd8a17efbb96574db0e4ca4eb4e4ef</string>
    <string name="change_city">Change city</string>
    <string name="title_activity_weathery">Weather</string>
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="CityMissing">Go to settings in top right corner and change city.</string>
    <string name="title_activity_my_calendar">MyCalendarActivity</string>
    <string name="title_activity_reminder">Reminder</string>

    <string name="hello_world">Hello world!</string>
    //Alarm
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_alarm_main">Remember</string>
    <string name="title_activity_alarm_receiver">Remember</string>

</resources>
