<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="superponystrikeforce.remember.Diary"
    android:background="#FFF778">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DearDiary"
        android:id="@+id/textView"
        android:textSize="20sp"
        android:layout_marginTop="46dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editText1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DiaryDate"
        android:id="@+id/textViewDate"
        android:textSize="20sp"
        android:layout_alignTop="@+id/textView"
        android:layout_alignEnd="@+id/editText1" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ems="10"
        android:gravity="left|top"
        android:inputType="textMultiLine"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_above="@+id/button">

        <requestFocus />
    </EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DiaryPrevious"
        android:layout_below="@+id/editText1"
        android:layout_alignParentStart="true"
        android:onClick="PreviousDiaryEntry"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:text="@string/DiarySend"
        android:onClick="writeToFile"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DiaryNext"
        android:layout_below="@+id/editText1"
        android:layout_alignEnd="@+id/editText1"
        android:onClick="NextDiaryEntry"/>

</RelativeLayout>
